# SearchLightAI

./: .dockerignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/client/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
apps/client/src/app/: layout.tsx  page.tsx
apps/client/src/app/videos/: page.tsx
apps/client/src/app/videos/[id]/: page.tsx
apps/client/src/components/layout/: header.tsx
apps/client/src/components/search/: search-bar.tsx  search-results.tsx  search-type-tabs.tsx
apps/client/src/components/videos/: processing-badge.tsx  upload-dialog.tsx  video-card.tsx  video-grid.tsx  video-player.tsx
apps/client/src/lib/: api.ts  utils.ts
apps/client/src/types/: index.ts
apps/server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  package.json  pyproject.toml
apps/server/alembic/: env.py
apps/server/alembic/versions/: 8d2bed558674_initial_schema.py  a806a5373448_initial_schema.py
apps/server/app/: __init__.py
apps/server/app/api/: __init__.py  dependencies.py  search.py  videos.py
apps/server/app/core/: config.py  database.py  logging.py
apps/server/app/models/: __init__.py  transcript.py  video.py
apps/server/app/schemas/: __init__.py  search.py  video.py
apps/server/app/services/: __init__.py  audio_extractor.py  embedding.py  transcription.py  vector_store.py  video_processor.py
apps/server/app/utils/: __init__.py  scoring.py  time.py
